...
            ) {
                Text(stringResource(Res.string.send_verification_email))
            }

            Button(
                onClick = onSkip,
                Modifier.fillMaxWidth().testTag("SkipVerificationButton"),
            ) {
                Text(stringResource(Res.string.skip_verification))
            }
        }
    }
}
...
