...
        Modifier.fillMaxSize().padding(16.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        StringInputField(
            value = name,
            onValueChange = { name = it },
            modifier = Modifier.testTag("ExerciseNameInput"),
            label = { Text(stringResource(Res.string.name)) },
            maxLength = 20,
        )

        Text(stringResource(Res.string.primary_muscle))
        val translations =
...
                            isCustom = true,
                            selectedPrimaryMuscle,
                            selectedSecondaryMuscle,
                        ),
                    )
                },
                modifier = Modifier.testTag("SaveExerciseButton"),
            ) {
                Text(stringResource(Res.string.save_exercise))
            }

            Button({ showDialog = true }) {
                Text(stringResource(Res.string.cancel))
...
