...
        Column(
            Modifier.width(IntrinsicSize.Max).wrapContentHeight(),
            verticalArrangement = Arrangement.spacedBy(16.dp),
        ) {
            Button(
                onBrowseExerciseData,
                Modifier.fillMaxWidth().testTag("BrowseExerciseHistoryButton"),
            ) {
                Text(stringResource(Res.string.browse_exercise_history))
            }

            Button(
                onBrowseWorkoutData,
...
