...
            measurementTypes.fromMeasurement(oldMeasurement)
        }
    }

    Column(Modifier.padding(16.dp)) {
        LazyColumn(
            modifier.fillMaxSize().weight(1.0f).testTag("MeasurementLazyList"),
        ) {
            itemsIndexed(measurementTypes) { idx, measurement ->
                MeasurementInputField(
                    measurement.backingField.value,
                    measurement.label,
                    measurement.unit,
...
            Button(
                onClick = {
                    // TODO notify of error
                    val measurement = measurementTypes.toMeasurement()
                    onSave(measurement)
                },
                modifier = Modifier.testTag("SaveMeasurementButton"),
            ) {
                Text(stringResource(Res.string.save_measurement))
            }
        }
    }
}
...
