...
                showDialog = false
            },
        )
    }

    Card(
        modifier = modifier.testTag("MeasurementCard"),
        onClick = { expanded = !expanded },
    ) {
        Column(
            Modifier.fillMaxSize().animateContentSize().padding(8.dp),
        ) {
            Row(
...
                Row(
                    Modifier.fillMaxWidth(),
                    horizontalArrangement = Arrangement.Center,
                ) {
                    Button(
                        onClick = { showDialog = true },
                        modifier = Modifier.fillMaxWidth().testTag("DeleteMeasurementButton"),
                        colors =
                            ButtonDefaults.buttonColors(
                                containerColor = MaterialTheme.colorScheme.error,
                                contentColor = MaterialTheme.colorScheme.onError,
                            ),
                    ) {
...
